--- a/Computer Science/OperatingSystem/프로세스와스레드.md
+++ b/Computer Science/OperatingSystem/프로세스와스레드.md
@@ -82,7 +82,7 @@
   - 프로세스의 특정한 수행 경로
   - 프로세스가 할당받은 자원을 이용하는 실행의 단위
 
-- 특징
+- 특징  
     <img src="https://github.com/CS-Study-2024/cs-study/assets/112626357/8dee4932-b8d3-4043-abc0-c7d7814b33b3" width="70%" title="스레드" alt="스레드"></img> 
   - 스레드는 프로세스 내에서 각각 Stack만 따로 할당받고 Code, Data, Heap 영역은 공유한다.
   - 스레드는 한 프로세스 내에서 동작되는 여러 실행의 흐름으로, 프로세스 내의 주소 공간이나 자원들(힙 공간 등)을 같은 프로세스 내에 스레드끼리 공유하면서 실행된다.
@@ -90,6 +90,15 @@
   - 각각의 스레드는 별도의 레지스터와 스택을 갖고 있지만, 힙 메모리는 서로 읽고 쓸 수 있다.
   - 한 스레드가 프로세스 자원을 변경하면, 다른 이웃 스레드(sibling thread)도 그 변경 결과를 즉시 볼 수 있다.
  
-
+<br/>
   
-
+## 자바 스레드(Java Thread)란?
+- 일반 스레드와 거의 차이가 없으며, JVM가 운영체제의 역할을 한다.
+- 자바에는 프로세스가 존재하지 않고 스레드만 존재하며, 자바 스레드는 JVM에 의해 스케줄되는 실행 단위 코드 블록이다.
+- 자바에서 스레드 스케줄링은 전적으로 JVM에 의해 이루어진다.
+- 아래와 같은 스레드와 관련된 많은 정보들도 JVM이 관리한다.
+  - 스레드가 몇 개 존재하는지
+  - 스레드로 실행되는 프로그램 코드의 메모리 위치는 어디인지
+  - 스레드의 상태는 무엇인지
+  - 스레드 우선순위는 얼마인지
+- 즉, 개발자는 자바 스레드로 작동할 스레드 코드를 작성하고, 스레드 코드가 생명을 가지고 실행을 시작하도록 JVM에 요청하는 일 뿐이다.
