--- a/Web/쿠기와 세션.md
+++ b/Web/쿠기와 세션.md
@@ -6,7 +6,10 @@
     
   <div markdown="1">    
 
-      더 트리가 되는 것이다.
+      쿠키, 세션, 토큰은 로그인과 같은 일을 할 때, '누가' 로그인 중인지 상태를 기억하기 위해 사용합니다.
+
+      먼저 쿠키란 브라우저에 저장되는 정보를 말합니다.
+      
   
   </div>
 </details>
@@ -18,7 +21,20 @@
     
   <div markdown="1">    
 
-      더 트리가 되는 것이다.
+      [장점]
+      1. 쿠키가 담긴 HTTP 요청이 도중에 노출되더라도 쿠키 자체(세션 ID)는 유의미한 값을 갖고 있지 않습니다.
+      서버 세션에 존재합니다.
+      2. 고유의 ID 값을 발급받습니다.
+      3. 서버의 저장 공간을 절약할 수 있습니다.
+
+      [단점]
+      1. 보안에 취약합니다: 요청 시 쿠키 값을 그대로 보냅니다.
+      2. 작언 허용 용량: 사이트 당 20개, 모두 합쳐 300개가 최대. 각 쿠키는 4Byte를 넘을 수 없습니다.
+      3. 웹 브라우저마다 지원 형태가 다릅니다.
+      4. 웹 브라우저를 변경할 경우 다른 웹 브라우저에서 저장한 쿠키 값을 사용할 수 없습니다.
+      5. 사용자가 보안상의 문제로 거부할 경우 사용이 불가능합니다.
+      6. 네트워크 부하: 쿠키의 크기가 클 경우 네트워크 부하가 커집니다.
+      7. 한번에 하나의 정보만 저장할 수 있습니다.
   
   </div>
 </details>
@@ -30,7 +46,15 @@
     
   <div markdown="1">    
 
-      더 트리가 되는 것이다.
+      [장점]
+      1. 어느 정도 보안 유지: 최초 접속 때를 제외하고 Session ID만 사용
+      2. 큰 허용 용량: 저장 개수나 용량 제한 없음(서버 용량 충분 시)
+      3. 서버에 저장되므로 클라이언트의 웹 브라우저에 의존하지 않아도 됨
+      4. 데이터를 Hash Table에 저장. 한 번에 많은 정보를 하나의 세션 객체에 저장 가능
+      5. SessionID만 보내므로, 세션의 크기가 커도 네트워크 부하가 거의 없음
+
+      [단점]
+      1. 서버에 부하: 서버에 데이터를 저장하므로 세션 양이 많아질 수록 서버에 부하가 커짐
   
   </div>
 </details>
@@ -42,7 +66,9 @@
     
   <div markdown="1">    
 
-      더 트리가 되는 것이다.
+      Persistence Cookie(지속 쿠키)는 세션 쿠키와 다르게 삭제되지 않고 더 길게 유지가 가능합니다.
+      지속 쿠키는 디스크에 저장되며, 브라우저를 닫거나 컴퓨터를 재시작해도 남아있습니다.
+      사용자 로그인 항상 유지와 같은 곳에서 사용됩니다.
   
   </div>
 </details>
@@ -54,7 +80,8 @@
     
   <div markdown="1">    
 
-      더 트리가 되는 것이다.
+      사용자가 사이트 탐색 시에 관련한 설정들과 선호사항을 저장하는 임시 쿠키입니다.
+      브라우저를 닫는 순간 삭제되게 됩니다.
   
   </div>
 </details>
@@ -66,7 +93,9 @@
     
   <div markdown="1">    
 
-      더 트리가 되는 것이다.
+      세션 쿠키와 지속 쿠키의 차이점은 파기 시점입니다.
+      Discard라는 파라미터가 설정되어 있거나, 파기까지 남은 시간인 Expires 또는 Max-Age라는 파라미터가 없으면
+      세션 쿠키입니다.
   
   </div>
 </details>
@@ -74,11 +103,15 @@
 <br/>
 
 <details>
-  <summary> Q. 세션의 동작 방식에 대해 설명해주세 </summary>
+  <summary> Q. 세션의 동작 방식에 대해 설명해주세요. </summary>
     
   <div markdown="1">    
 
-      더 트리가 되는 것이다.
+      1. 클라이언트가 서버에 접속 시 세션 ID를 발급받습니다.
+      2. 클라이언트는 세션 ID에 대해 쿠키를 사용해 브라우저에 저장합니다.
+      3. 클라이언트는 서버에 요청할 때, 이 쿠키의 세션 ID를 같이 서버에 전달해서 요청합니다.
+      4. 서버는 세션 ID를 전달받아 세션 ID로 세션에 있는 클라이언트 정보를 가져와서 사용합니다.
+      5. 클라이언트 정보로 서버 요청을 처리하며 클라이언트에 응답합니다.
   
   </div>
 </details>
